Release 0.012:
	* More logging and stuff in ObjectD.  And fixed a bug that
	  caused log messages on rebuild.

Release 0.011b:
	* Added @make_portable command, very similar to @make_room.
	* Critical fix to setting examine desc for @make_room.
	* @stat now scrolls its output, takes objects in the room or
	  inventory as arguments and reports better on mobiles.
	* Added "openable" flag to portables, and correspondingly to
	  @stat, @set_obj_flag and the online help.
	* Critical fix to @set_obj_flag -- didn't work before.
	* Added open and close commands, usable by all.
	* Fixed a couple of annoying ObjectD bugs that caused log
	  messages on %code commands.  Still got a known ObjectD
	  bug (and a feature request) to go.

Release 0.011:
	* Lots of refactoring and general code changes.  Always.  Every
	  release.  This one too.
	* Moved command-sets and state-stacks into two separate libraries,
	each inherited by the main user object (/usr/System/obj/user.c).
	* Social verbs are now usable like regular commands.
	* Removed old obsolete detail code
	* Added @set_obj_flag back.  Previously didn't work.
	* Now the MobileD reloads the binder file when recompiled.  So
	  now we can add new mobile types at runtime.
	* Added new "animal" mobile type.  Mobiles can now have extra
	  data embedded in their mobfile entries, which is a pretty
	  mandatory thing for more complex mobiles.
	* Added "idea" command, like bug and typo.  Made sure more
	  information was included in the reports like where the report
	  takes place and who reported it.
	* Added a @make_room command and its associated user states.  The
	  idea is that you can type @make_room and then just answer the
	  questions from there to create a new room object.  Simpler but
	  slower than the older way.
	* Added generic @delete command that will destroy rooms, exits,
	  mobiles or portables.
	* The display of @list_room now scrolls appropriately.
	
Release 0.010:
