@@ -1,4 +1,8 @@
 Release 0.012:
+	* Now the upgraded() function for upgraded objects is called
+	  with a call_out, so it executes the new code instead of the
+	  old code.  The compiling() function still executes the
+	  pre-recompile code.
 	* More logging and stuff in ObjectD.  And fixed a bug that
 	  caused log messages on rebuild.
 
